[package]
name = "crossroads"
version = "0.1.0"
edition = "2021"
authors = ["Janosch Reppnow <janoschre+rust@gmail.com>"]
license = "MIT"
description = "A proc-macro that turns one function into many along a user-defined set of fork points!"
keywords = ["test", "section", "nested", "fork", "subtest"]
repository = "https://github.com/jreppnow/crossroads"
categories = ["development-tools", "development-tools::testing"]

[lib]
proc-macro = true


[[test]]
name = "good_cases"
path = "tests/compile/good.rs"

[[test]]
name = "logic"
path = "tests/logic.rs"

[[example]]
name = "testing_map"
path = "examples/map.rs"
crate-type = ["lib"]
test = true

[dependencies]
syn = { version = "1.0", features = ["full", "visit", "visit-mut"] }

[dev-dependencies]
trybuild = "1.0"
